@@ -49,6 +49,7 @@ public final class WherePredicateStep<S> extends FilterStep<S> implements Scopin
 
     protected String startKey;
     protected List<String> selectKeys;
+    private Boolean pathSelectKey = null;
     protected P<Object> predicate;
     protected final Set<String> scopeKeys = new HashSet<>();
     protected Set<String> keepLabels;
@@ -137,11 +138,19 @@ public final class WherePredicateStep<S> extends FilterStep<S> implements Scopin
 
     @Override
     public Set<TraverserRequirement> getRequirements() {
-        final Set<TraverserRequirement> requirements =
+        final Set<TraverserRequirement> requirements = null == this.pathSelectKey ?
                 TraversalHelper.getLabels(TraversalHelper.getRootTraversal(this.traversal)).stream().filter(this.scopeKeys::contains).findAny().isPresent() ?
+                        TYPICAL_GLOBAL_REQUIREMENTS :
+                        TYPICAL_LOCAL_REQUIREMENTS :
+                this.pathSelectKey ?
                         TYPICAL_GLOBAL_REQUIREMENTS :
                         TYPICAL_LOCAL_REQUIREMENTS;
         return this.getSelfAndChildRequirements(requirements.toArray(new TraverserRequirement[requirements.size()]));
+    }
+
+    @Override
+    public void setPathLabels(final Set<String> labels) {
+        this.pathSelectKey = labels.stream().filter(this.scopeKeys::contains).findAny().isPresent();
     }
 
     @Override
