@@ -48,6 +48,7 @@ public final class SelectStep<S, E> extends MapStep<S, Map<String, E>> implement
     private TraversalRing<Object, E> traversalRing = new TraversalRing<>();
     private final Pop pop;
     private final List<String> selectKeys;
+    private Boolean pathSelectKey = null;
     private final Set<String> selectKeysSet;
     private Set<String> keepLabels;
 
@@ -120,9 +121,17 @@ public final class SelectStep<S, E> extends MapStep<S, Map<String, E>> implement
 
     @Override
     public Set<TraverserRequirement> getRequirements() {
-        return this.getSelfAndChildRequirements(TraversalHelper.getLabels(TraversalHelper.getRootTraversal(this.traversal)).stream().filter(this.selectKeys::contains).findAny().isPresent() ?
-                TYPICAL_GLOBAL_REQUIREMENTS_ARRAY :
-                TYPICAL_LOCAL_REQUIREMENTS_ARRAY);
+        if (null == this.pathSelectKey)
+            return this.getSelfAndChildRequirements(TraversalHelper.getLabels(TraversalHelper.getRootTraversal(this.traversal)).stream().filter(this.selectKeys::contains).findAny().isPresent() ?
+                    TYPICAL_GLOBAL_REQUIREMENTS_ARRAY :
+                    TYPICAL_LOCAL_REQUIREMENTS_ARRAY);
+        else
+            return this.getSelfAndChildRequirements(this.pathSelectKey ? TYPICAL_GLOBAL_REQUIREMENTS_ARRAY : TYPICAL_LOCAL_REQUIREMENTS_ARRAY);
+    }
+
+    @Override
+    public void setPathLabels(final Set<String> labels) {
+        this.pathSelectKey = labels.stream().filter(this.selectKeysSet::contains).findAny().isPresent();
     }
 
     @Override
